<resources>
    <string name="app_name">Week 5 CET3013 ColourPicker</string>

    <string name="header_text_main">Please click the button below to choose your favorite color of the rainbow!</string>
    <string name="header_text_picker">Rainbow Colors</string>
    <string name="footer_text_picker">Click the button above which is your favorite color of the rainbow.</string>
    <string name="color_chosen_message">%1$s is your favorite color!</string>
    <string name="submit_button_text">CHOOSE COLOR</string>
    <string name="save">Save Color</string>
    <string name="about">About</string>

    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>

    <string name="about_message">Color Picker Version 1\nProgrammer: Seow Fen</string>
    <string name="about_title">Color Picker App</string>
</resources>