<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorPickerActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        style="@style/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_picker_header"
            style="@style/header.rainbows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_text_picker" />

        <Button
            android:id="@+id/button_red"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/red" />

        <Button
            android:id="@+id/button_orange"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/orange" />

        <Button
            android:id="@+id/button_yellow"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/yellow" />

        <Button
            android:id="@+id/button_green"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/green" />

        <Button
            android:id="@+id/button_blue"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/blue" />

        <Button
            android:id="@+id/button_indigo"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/indigo"
            android:text="@string/indigo" />

        <Button
            android:id="@+id/button_violet"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/violet"
            android:text="@string/violet" />

        <TextView
            android:id="@+id/text_footer"
            style="@style/footer.rainbows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footer_text_picker" />

    </LinearLayout>
</ScrollView>
